Fix align-items

--- a/src/ components/Projects/Project/Project.module.scss
+++ b/src/ components/Projects/Project/Project.module.scss
@@ -40,6 +40,7 @@
   .projectDescription {
     padding: 20px;
     box-sizing: border-box;
+    color: $secondaryTextColor
   }
 
   @media screen and (max-width: 750px) {
