--- a/src/ components/Projects/Projects.module.scss
+++ b/src/ components/Projects/Projects.module.scss
@@ -10,7 +10,7 @@
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
-      align-items: flex-start;
+      //align-items: flex-start;
       @media screen and (max-width: 1200px) {
         flex-direction: column;
         align-items: center;
