--- a/src/ components/Skills/Skills.module.scss
+++ b/src/ components/Skills/Skills.module.scss
@@ -11,7 +11,7 @@
       /*flex-direction: row;*/
       justify-content: space-between;
       flex-wrap: wrap;
-      align-items: start;
+      //align-items: start;
       @media screen and (max-width: 750px) {
         justify-content: center;
       }
